hw10/python_app/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: LoadBalancer
  selector:
    app: hw10
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31318
