hw10/python_app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    app: hw10-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31318

---
apiVersion: v1
kind: Service
metadata:
  name: logic
spec:
  type: LoadBalancer
  selector:
    app: hw10-business-logic-app
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 31319

---
apiVersion: v1
kind: Service
metadata:
  name: transaction-controller
spec:
  type: LoadBalancer
  selector:
    app: hw10-transaction-controller
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
      nodePort: 31320
